--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
+    "@vercel/speed-insights": "^1.3.1",
     "astro": "^5.16.4",
     "typescript": "^5.9.3"
   },
